--- a/views/_layouts/navigation/user-navigation.ejs
+++ b/views/_layouts/navigation/user-navigation.ejs
@@ -50,7 +50,11 @@
                 else
                 {
                 %>
-                    <a id="rentalMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/login" aria-haspopup="true" aria-expanded="false" aria-labelledby="rentalSubMenu">Login or Register</a>
+                    <a id="rentalMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/login" aria-haspopup="true" aria-expanded="false" aria-labelledby="rentalSubMenu">Login</a>
+
+                    <li class="nav-item hs-has-mega-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-max-width="722px" data-position="right">
+                        <a id="tourMegaMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle" href="/signup" aria-haspopup="true" aria-expanded="false">Register</a>
+                    </li>
                 <%}%>
             </li>
             <!-- End Rental -->
