--- a/views/owner-dashboard.ejs
+++ b/views/owner-dashboard.ejs
@@ -191,7 +191,7 @@
                                     <tr id="rowid_<%= count%>">
                                         <th scope="row" class="align-middle">
                                             <div class="d-flex align-items-center text-primary font-weight-medium">
-                                                <label><a href="/BookedPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
+                                                <label><a href="/LookPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
                                             </div>
                                         </th>
                                         <td class="align-middle text-secondary">
@@ -294,7 +294,7 @@
                                     <tr id="rowid_<%= count%>">
                                         <th scope="row" class="align-middle">
                                             <div class="d-flex align-items-center text-primary font-weight-medium">
-                                                <label><a href="/BookedPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
+                                                <label><a href="/LookPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
                                             </div>
                                         </th>
                                         <td class="align-middle text-secondary">
