--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,20 +82,11 @@
                                     Login
                                 </button>
                             </div>
-                            <div class="d-flex justify-content-between mb-3">
-                                <div class="custom-control custom-checkbox custom-control-inline">
-                                    <input type="checkbox" id="customCheckboxInline1" name="customCheckboxInline1"
-                                           class="custom-control-input">
-                                    <label class="custom-control-label" for="customCheckboxInline1">Remember me</label>
-                                </div>
-                                <a class="js-animation-link text-primary font-size-14" href="javascript:;"
-                                   data-target="#forgotPassword" data-link-group="idForm" data-animation-in="fadeIn"><u>Forgot
-                                        Password?</u></a>
-                            </div>
+                 
                             <div class="card-footer p-0">
                                 <div class="card-footer__bottom p-4 text-center font-size-14">
-                                    <span class="text-gray-1">Don't have an account? </span>
-                                    <a id="rentalMenu" href="/signup">Register</a> here
+                                    <span  class="text-gray-1">Don't have an account? </span>
+                                    <a id="rentalMenu" href="/signup" style="font-size: 15px;">Register</a> here
                                 </div>
                             </div>
                         </div>
