--- a/views/user-dashboard.ejs
+++ b/views/user-dashboard.ejs
@@ -215,7 +215,7 @@
                                     <tr id="rowid_<%= count%>">
                                         <th scope="row" class="align-middle">
                                             <div class="d-flex align-items-center text-primary font-weight-medium">
-                                                <label><a href="/BookedPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
+                                                <label><a href="/LookPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
                                             </div>
                                         </th>
                                         <td class="align-middle text-secondary">
@@ -318,7 +318,7 @@
                                     <tr id="rowid_<%= count%>">
                                         <th scope="row" class="align-middle">
                                             <div class="d-flex align-items-center text-primary font-weight-medium">
-                                                <label><a href="/BookedPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
+                                                <label><a href="/LookPropertyDetails/<%= stay.PropertyID%>"><%= stay.PropertyName%></a> </label>
                                             </div>
                                         </th>
                                         <td class="align-middle text-secondary">
