Fixed Tax Issue

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -183,7 +183,7 @@
                                                 </li>
 
                                                 <li class="d-flex justify-content-between py-2">
-                                                    <span class="font-weight-medium">Tax</span>
+                                                    <span class="font-weight-medium">Tax (HST)</span>
                                                     <span class="text-secondary">$ <%= BookingInfo.TaxAmount%> (<%= BookingInfo.TaxPercent%>%)</span>
                                                 </li>
 
