--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -279,10 +279,10 @@
                                             <span class="text-secondary"><%= BookingInfo.Province %> </span>
                                         </li>
 
-<!--                                        <li class="d-flex justify-content-between py-2">
+                                       <li class="d-flex justify-content-between py-2">
                                             <span class="font-weight-medium">Tax (HST)</span>
                                             <span class="text-secondary">$ <%= BookingInfo.TaxAmount %> (<%= BookingInfo.TaxPercent %>%)</span>
-                                        </li>-->
+                                        </li>
 
                                         <li class="d-flex justify-content-between py-2 font-size-17 font-weight-bold">
                                             <span class="font-weight-bold">Pay Amount</span>
