--- a/views/property-details.ejs
+++ b/views/property-details.ejs
@@ -3,50 +3,103 @@
     <head>
     <%- include('_layouts/head') -%>
     <%- include('_layouts/scripts') -%>
+    <script src='/assets/js/Utilities.js'></script>
     <script language="javascript" type="text/javascript">
-    function getMaxDate()
-        {
-            var dtToday = new Date();
-                
-                var month = dtToday.getMonth() + 3;
-                var day = dtToday.getDate();
-                var year = dtToday.getFullYear();
-                if(month < 10)
-                    month = '0' + month.toString();
-                if(day < 10)
-                    day = '0' + day.toString();
-                
-                var maxDate = year + '-' + month + '-' + day;
-                console.log('max date :'+maxDate);
-                return new Date(year,month,day);
-        }
-        function display()
-         {
-           //  alert('calendar closed!!!');
-    //          console.log('picketr closed!');
-    //          const myInput = document.getElementById("checkin_checkout_dates");
-    //     //myInput.className = 'active';
-    //   //  myInput._flatpickr.config.minDate='today';
-    //     myInput._flatpickr.config._disable = ["14 Apr 2020"];
-    //     $("#checkin_checkout_dates").datepicker("refresh");
-         }
+    
         
          function updateBookingInfo()
         {
             var element = document.getElementById("spanGuestsAndRooms");
             var adultsCount = $('#txtGuestsCount').val();
             var roomsCount = $('#txtRoomsCount').val();
-            var msg = adultsCount+" Guests - "+roomsCount+" Rooms";
+            var msg ="";
+            if(roomsCount < 2)
+                msg = adultsCount+" Guests - "+roomsCount+" Room";
+                else
+                msg = adultsCount+" Guests - "+roomsCount+" Rooms";
            element.innerHTML = msg;
             $('#txtRoomsAndGuests').val(msg);
+
+            //check for Rooms availability
+            validatePropertyAvailability($('#txtCheckInCheckout').val(),roomsCount);
             window.location = "#";
             //document.getElementById('#').scrollIntoView();
             //$('#basicDropdownClick').hide();
             //$('#basicDropdownClick').show();
         }
-        function dispData(){
-       alert('picker!');
+
+        var validatePropertyAvailability = function(selectedDates , selectedRooms)
+        {
+            var btnbooknow = document.getElementById("btnBookNow");
+            var btnsoldout = document.getElementById("btnSoldOut");
+            var msg = document.getElementById("txtMessage");
+            var msg2 = document.getElementById("txtMessage2");
+            var isValidDatesSelected = true;
+            var isValidRoomsSelected = true;
+            <%
+            if (!IsPropertyAvailable) {%>
+            //Check Dates are valid or not.
+           
+            var checkInChekoutDate = selectedDates.split('-');
+            if(checkInChekoutDate != null && checkInChekoutDate.length > 1)
+            {
+                var prevCheckInChekOutDates ="<%=UserPreference.CheckInDate%> - <%=UserPreference.CheckOutDate%>";
+                if(prevCheckInChekOutDates === selectedDates)
+                {
+                    //Invalid as same dates selected!
+                    isValidDatesSelected = false;
+                }
             }
+            else
+            {
+                //Invalid as no proper checkin checkout dates selected!
+                isValidDatesSelected = false;
+            }
+
+            <%}%>
+
+           
+            //Check Dates are valid or not.
+            
+            selectedRoomsCount = parseInt(selectedRooms);
+            var availableRooms = parseInt(<%= PropertyDetails.rooms%>);
+            if(availableRooms < selectedRoomsCount)
+            {
+                isValidRoomsSelected = false;
+            }
+          
+
+            if (!isValidDatesSelected || !isValidRoomsSelected) {
+                btnbooknow.style.display = "none";
+                btnsoldout.style.display = "block";
+
+                if(isValidDatesSelected && !isValidRoomsSelected)
+                {
+                    //change button text
+                    $('#soldoutLink').text("Insufficient Rooms!");
+                }
+                else
+                {
+                    $('#soldoutLink').text("Sold Out!");
+                }
+            }
+            else {
+                btnbooknow.style.display = "block";
+                btnsoldout.style.display = "none";
+            }
+
+            if (!isValidDatesSelected)
+                msg.style.display = "block";
+            else
+                msg.style.display = "none";
+            if (!isValidRoomsSelected)
+                msg2.style.display = "block";
+            else
+                msg2.style.display = "none";
+         
+
+        }
+       
 		$(document).ready(function () {
             console.log('dispdate : <%=UserPreference.DisplayDate%>');
             console.log('CheckInDate : <%=UserPreference.CheckInDate%>');
@@ -54,19 +107,55 @@
             var btnbooknow = document.getElementById("btnBookNow");
             var btnsoldout = document.getElementById("btnSoldOut");
             var msg = document.getElementById("txtMessage");
+            var msg2 = document.getElementById("txtMessage2");
+
             <%if(!IsPropertyAvailable)
             {%>
-               
-            btnbooknow.style.display = "none";
-            btnsoldout.style.display = "block";
+              
+            // btnbooknow.style.display = "none";
+            // btnsoldout.style.display = "block";
             msg.style.display = "block";
                 <%}
                 else{
                     %>
-                    btnbooknow.style.display = "block";
-            btnsoldout.style.display = "none";
+                    // btnbooknow.style.display = "block";
+                    //     btnsoldout.style.display = "none";
             msg.style.display = "none";
                     <%}%>
+
+                    <%if (!IsRoomsAvailable) {%>
+                        console.log("IsRoomsAvailable : "+false);
+                        // btnbooknow.style.display = "none";
+                        // btnsoldout.style.display = "block";
+                        msg2.style.display = "block";
+
+                        <%}
+                        else {
+                            %>
+                            //btnbooknow.style.display = "block";
+                        //btnsoldout.style.display = "none";
+                        msg2.style.display = "none";
+                    <%}
+                    
+                    if(!IsRoomsAvailable || !IsPropertyAvailable)
+                    {%>
+                          btnbooknow.style.display = "none";
+                          btnsoldout.style.display = "block";
+
+                          <%if (IsPropertyAvailable && !IsRoomsAvailable) {%>
+                            //change button text
+                            $('#soldoutLink').text("Insufficient Rooms!");
+                        <%}
+                        else {%>
+                            $('#soldoutLink').text("Sold Out!");
+                        <%}%>
+                    <%}
+                    else
+                    {%>
+                        btnbooknow.style.display = "block";
+                        btnsoldout.style.display = "none";
+                    <%}%>
+       
             //const myInput1 = document.getElementById("checkin_checkout_dates");
            // myInput1._flatpickr.config.onClose=display;
             window.setTimeout(function () {
@@ -77,7 +166,7 @@
         //myInput.className = 'active';
         myInput._flatpickr.config.minDate='today';
         //myInput._flatpickr.config.disable = ["27 Apr 2020"];
-        //console.log('<%=DisabledDates[0].from%>');
+        
         var items = [];
         <%
         for(let daterange of DisabledDates)
@@ -94,14 +183,13 @@
         
         //myInput._flatpickr.config.set('onClose', dispData()); 
         //console.log('len : '+myInput._flatpickr.config.onClose.length);
-        myInput._flatpickr.config.onClose.push(function(selectedDates, dateStr, instance){
-            
-            btnbooknow.style.display = "block";
-            btnsoldout.style.display = "none";
-            msg.style.display = "none";
-            //btnsoldout.style.display = "none";
+        myInput._flatpickr.config.onClose.push(function(selectedDates, selectedDate, instance){
+            console.log(selectedDates+" and "+selectedDate+" and "+ instance);
+            //var arrDates = selectedDate.split('-');
+            $('#txtCheckInCheckout').val(selectedDate)
+            validatePropertyAvailability(selectedDate,$('#txtRoomsCount').val());
         }); 
-        myInput._flatpickr.set('maxDate',getMaxDate());
+        myInput._flatpickr.set('maxDate',getMaxBookingDate());
         console.log('[\"<%=UserPreference.CheckInDate%>\" , \"<%=UserPreference.CheckOutDate%>\"]');
         
         //myInput._flatpickr("refresh");
@@ -313,13 +401,7 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link font-weight-medium" href="#scroll-location">
-                                            <div class="d-flex flex-column flex-md-row  position-relative text-dark align-items-center">
-                                                <span class="tabtext font-weight-semi-bold">Map</span>
-                                            </div>
-                                        </a>
-                                    </li>
+                                   
                                 </ul>
                             </div>
                         </div>
@@ -454,12 +536,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="border-bottom py-4">
-                            <h5 id="scroll-location" class="font-size-21 font-weight-bold text-dark mb-4">
-                                Map
-                            </h5>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d7772.225184901051!2d80.28441927545006!3d13.092050163095971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e0!4m3!3m2!1d13.098645!2d80.2916092!4m5!1s0x3a526f5213f46501%3A0x56d2a4b14dba42f2!2sMadras%20High%20Court%2C%20High%20Ct%20Rd%2C%20Parry&#39;s%20Corner%2C%20George%20Town%2C%20Chennai%2C%20Tamil%20Nadu%20600108!3m2!1d13.0867057!2d80.28774949999999!5e0!3m2!1sen!2sin!4v1580358870925!5m2!1sen!2sin" width="100%" height="480" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                        </div>
+                        
                     </div>
                     
                     <div class="col-lg-4 col-xl-3">
@@ -478,13 +555,13 @@
                                     <div class="mb-4">
                                         <div class="input-group border-bottom border-width-2 border-color-1" disabled="disabled">
                                             <i class="flaticon-price-1 d-flex align-items-center mr-2 text-primary font-weight-semi-bold font-size-22"></i>
-                                          <input  type="text" value="$<%=PropertyDetails.price%>" class="form-control font-size-16 shadow-none hero-form font-weight-bold border-0 p-0" placeholder="Where are you going?" aria-label="Where are you going?" aria-describedby="keywordInputAddon">
+                                          <input readonly="readonly" style="background-color: transparent;"  type="text" value="$<%=PropertyDetails.price%>" class="form-control font-size-16 shadow-none hero-form font-weight-bold border-0 p-0" placeholder="Where are you going?" aria-label="Where are you going?" aria-describedby="keywordInputAddon">
                                         </div>
                                     </div>
                                     <!-- End Input -->
 
                                     <!-- Input -->
-                                    <span class="d-block text-gray-1 font-weight-normal mb-0 text-left">First Available Dates</span>
+                                    <span class="d-block text-gray-1 font-weight-normal mb-0 text-left">Check In - Out</span>
                                     <div class="mb-4" id="datepickrControl">
                                         <div class="border-bottom border-width-2 border-color-1">
                                             <div id="datepickerWrapperPick" class="u-datepicker input-group">
@@ -499,11 +576,11 @@
                                                 placeholder="<%=UserPreference.CheckInDate%> - <%=UserPreference.CheckOutDate%>"
                                                 data-rp-default-date="[<%= UserPreference.DisplayDate%>]"
                                                 name = "checkin_checkout_dates"
-                                                id="checkin_checkout_dates"                                                
-                                               
+                                                id="checkin_checkout_dates" 
                                                 >
                                                
                                             </div>
+                                            <input type="hidden" id="txtCheckInCheckout" value="<%=UserPreference.CheckInDate%> - <%=UserPreference.CheckOutDate%>"/>
                                             <!-- End Datepicker '["Jul 7 / 2020", "Aug 25 / 2020"]'-->
                                         </div>
                                     </div>
@@ -579,7 +656,7 @@
                                     </a>
                                 </div>
                                 <div id="btnSoldOut">
-                                        <a id="propertyBookingControl1"
+                                        <a id="soldoutLink"
                                         style="background-color: gray;color: whitesmoke;border-color: gray;"
                                         class="btn btn-primary d-flex align-items-center justify-content-center height-60 w-100 mb-xl-0 mb-lg-1  font-weight-bold"
                                         >
@@ -592,7 +669,9 @@
                                     </div> -->
                                  
                                         <br/>
-                                    <span id="txtMessage" style="font-size: 15px; color: red;font-family: 'Rubik', Helvetica, Arial, sans-serif;">Select other available dates from the calendar</span>
+                                    <span id="txtMessage" style="font-size: 15px; color: #FF4500;font-family: 'Rubik', Helvetica, Arial, sans-serif;">Error : Property is soldout , choose other available dates.</span>
+                                </br>
+                                    <span id="txtMessage2" style="font-size: 15px; color: #FF4500;font-family: 'Rubik', Helvetica, Arial, sans-serif;">Error : No sufficient rooms, choose less no.of rooms or change the property.</span>
                                    
                                 </div>
                             </div>
